[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/cmsp_timer.gd" type="Script" id=1]

[node name="cmsp_timer" type="Timer"]
wait_time = 20.0
script = ExtResource( 1 )

[node name="movement_opp" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="attack_counter" type="Timer" parent="."]
wait_time = 15.0

[connection signal="timeout" from="." to="." method="_on_cmsp_timer_timeout"]
[connection signal="timeout" from="movement_opp" to="." method="_on_movement_opp_timeout"]
[connection signal="timeout" from="attack_counter" to="." method="_on_attack_counter_timeout"]
